# log-cruncher

./: .gitignore  Cargo.toml  README.md  update.sh
fetch/: .gitignore  Cargo.toml  default.do
fetch/src/: cruncher.rs  fetcher.rs  lib.rs  record.rs  schema.sql  streamhack.rs
quarantine/: README.txt
reports/: default.txt.do  hits.sql  investigate.sh  joins.sql  summary.sql
src/: cruncher.rs  fetcher.rs  lib.rs  record.rs  schema.sql
